[package]
name = "super_pipe"
version = "0.1.0"
authors = ["Ashton Wiersdorf <ashton.wiersdorf@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.2"
rusqlite = "0.20.0"
serde_json = "1.0"
dirs = "2.0.2"