[package]
name = "super_pipe"
version = "0.0.1"
authors = ["Ashton Wiersdorf <ashton.wiersdorf@pobox.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.14"
structopt = "0.3.2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
sha1 = "0.6.0"
# serde_json = "1.0"
dirs = "2.0.2"